k8s/bot-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: slimwidgets-bot
spec:
  replicas: 1
  serviceName: slimwidgets-bot
  selector:
    matchLabels:
      run: slimwidgets-bot
  template:
    metadata:
      labels:
        run: slimwidgets-bot
    spec:
      containers:
        - name: jakegealer-me
          image: docker.pkg.github.com/jakemakesstuff/slimwidgets.io/bot:latest
          imagePullPolicy: Always
      imagePullSecrets:
        - name: github
