k8s/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: slimwidgets-web
spec:
  replicas: 2
  serviceName: slimwidgets-web
  selector:
    matchLabels:
      run: slimwidgets-web
  template:
    metadata:
      labels:
        run: slimwidgets-web
    spec:
      containers:
        - name: slimwidgets-web
          image: docker.pkg.github.com/jakemakesstuff/slimwidgets.io/web
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8000
