k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slimwidgets-web
  labels:
    run: slimwidgets-web
spec:
  ports:
    - port: 8000
      protocol: TCP
  selector:
    run: slimwidgets-web
