k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: slimwidgets-web-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - slimwidgets.io
      secretName: slimwidgets-web-letsencrypt
  rules:
    - host: slimwidgets.io
      http:
        paths:
          - path: /
            backend:
              serviceName: slimwidgets-web
              servicePort: 8000
